# AutoAccounting

./: .gitignore  .gitmodules  CONTRIBUTING.md  DevelopmentLog.md  README.md  SECURITY.md  build.gradle  build.gradle.kts  commit-prompt.txt  configuration.json  gradle.properties  jitpack.yml  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  function_report.yml  question_report.yml
.github/workflows/: beta.yml  build.sh  canary.yml  changelog.sh  configuration.json  key  main.py  night.yml  stable.yml  upload.py
MagiskModule/: module.prop  post-fs-data.sh  sepolicy.rule  service.sh  uninstall.sh
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/helper/res/values/: strings.xml
app/src/lspatch/: AndroidManifest.xml
app/src/lspatch/res/values/: strings.xml
app/src/lsposed/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/edit/: ai.html  js.html  regex.html
app/src/main/assets/models/: cls.nb
app/src/main/assets/rule/: index.html  regex_2.js  rule.css
app/src/main/assets/shell/: starter.sh  stoper.sh
app/src/main/assets/summary/: ai.html  summary.html
app/src/main/assets/textmate/: abyss.json  darcula.json  languages.json
app/src/main/cpp/: CMakeLists.txt  File.cpp  File.h  Handler.cpp  Handler.h  Server.cpp  Server.h  misc.cpp  misc.h  starter.cpp  starter.h
app/src/main/cpp/file/: File.cpp  File.h
app/src/main/cpp/http/: Http.cpp  Http.h
app/src/main/cpp/http/handler/: Handler.cpp  Handler.h
app/src/main/cpp/http/server/: Server.cpp  Server.h
app/src/main/cpp/utils/: ThreadLocalStorage.h  trim.cpp
app/src/main/res/anim/: fade_in.xml  fade_out.xml  slide_in_down.xml  slide_in_right.xml  slide_out_left.xml  slide_out_up.xml
app/src/main/res/drawable/: bg_danger_icon.xml  bg_debug_tag.xml  bg_layout_tip.xml  bg_layout_tip_left.xml  bg_mode_tag.xml  bg_pro_gradient_active.xml  bg_pro_gradient_inactive.xml  bg_round_default.xml  bg_success_icon.xml  bg_three.xml  border.xml  bottom_data_selector.xml  bottom_home_selector.xml  bottom_order_selector.xml  bottom_rule_selector.xml  bottom_select_data.xml  bottom_select_home.xml  bottom_select_log.xml  bottom_select_order.xml  bottom_select_rule.xml  bottom_select_setting.xml  bottom_setting_selector.xml  bottom_sheet_dialog_background.xml  bottom_unselect_data.xml  bottom_unselect_home.xml  bottom_unselect_order.xml  bottom_unselect_rule.xml  bottom_unselect_setting.xml  choose_theme.xml  currency_label_background.xml  data_filter.xml  data_helper.xml  data_sms.xml  fade_mask.xml  flex_item_gap.xml  float_add.xml  float_check.xml  float_fee.xml  float_minus.xml  float_moeny.xml  (+207 more)
app/src/main/res/drawable-night/: bg_pro_gradient_inactive.xml
app/src/main/res/layout/: about_dialog.xml  activity_auth.xml  activity_error.xml  activity_intro.xml  activity_main.xml  activity_transparent.xml  adapter_app.xml  adapter_apps.xml  adapter_asset_group_header.xml  adapter_asset_list.xml  adapter_assets.xml  adapter_auto_app.xml  adapter_backup.xml  adapter_bill_book.xml  adapter_book.xml  adapter_book_bill.xml  adapter_category_list.xml  adapter_category_stats.xml  adapter_currency_select.xml  adapter_data.xml  adapter_data_rule.xml  adapter_log.xml  adapter_map.xml  adapter_order.xml  adapter_order_item.xml  adapter_replace_preview.xml  adapter_rule.xml  adapter_tag_list.xml  adapter_text.xml  book_select_dialog.xml  card_book.xml  card_monthly.xml  card_rule_version.xml  card_status.xml  component_ai.xml  (+131 more)
app/src/xposed/: AndroidManifest.xml
app/src/xposed/assets/: xposed_init
app/xposed/release/: output-metadata.json
common/: build.gradle
data/: build.gradle
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
dex/: build.gradle  build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ocr/: build.gradle.kts
rule/: build.gradle
rule/src/main/: AndroidManifest.xml
sdk/: build.gradle  publish-module.gradle
sdk/src/main/: AndroidManifest.xml
server/: .gitignore  build.gradle  build.gradle.kts
server/libs/: quickjs-android-release.aar
server/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  common.cpp  common.h  server.cpp
server/src/main/cpp/db/: Database.cpp  Database.h  DbManager.cpp  DbManager.h
server/src/main/cpp/db/models/: AppDataModel.cpp  AppDataModel.h  AssetsMapModel.cpp  AssetsMapModel.h  AssetsModel.cpp  AssetsModel.h  AuthModel.cpp  AuthModel.h  BillInfoModel.cpp  BillInfoModel.h  BookBillModel.cpp  BookBillModel.h  BookNameModel.cpp  BookNameModel.h  CategoryModel.cpp  CategoryModel.h  CustomRuleModel.cpp  CustomRuleModel.h  LogModel.cpp  LogModel.h  RuleModel.cpp  RuleModel.h  RuleSettingModel.h  SettingsModel.cpp  SettingsModel.h
server/src/main/cpp/db/orm/: Field.cpp  Field.h  FieldType.h  Table.cpp  Table.h  Utils.cpp  Utils.h
server/src/main/cpp/ws/: BaseHandler.cpp  BaseHandler.h  Logger.cpp  Logger.h  RouteManager.cpp  RouteManager.h  TokenManager.cpp  TokenManager.h  VersionManager.cpp  VersionManager.h  WebSocketServer.cpp  WebSocketServer.h
server/src/main/cpp/ws/route/: AppDataHandler.cpp  AppDataHandler.h  AssetHandler.cpp  AssetHandler.h  AssetsMapHandler.cpp  AssetsMapHandler.h  BillHandler.cpp  BillHandler.h  BookBillHandler.cpp  BookBillHandler.h  BookNameHandler.cpp  BookNameHandler.h  CategoryHandler.cpp  CategoryHandler.h  CustomRuleHandler.cpp  CustomRuleHandler.h  JsHandler.cpp  JsHandler.h  LogHandler.cpp  LogHandler.h  LoginHandler.cpp  LoginHandler.h  RuleHandler.cpp  RuleHandler.h  SettingHandler.cpp  SettingHandler.h
server/src/test/resources/: test_data_didi.json  test_data_meituan.json  test_data_merge_account.json  test_data_transfer.json
shell/: build.gradle.kts
shell/src/main/: AndroidManifest.xml
test/: build.gradle.kts
test/src/main/resources/: test_data_didi.json  test_data_meituan.json  test_data_merge_account.json  test_data_transfer.json  test_data_transfer_account.json
tests/: build.gradle
(+1097 files in other folders)
